# zuri1.0

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  INCIDENT-2026-04-03-BUILD-FAILURE.md  README.md  id_standards.yaml  next.config.js  package-lock.json  package.json  system_config.yaml  system_requirements.yaml  tailwind.config.js  vercel.json  vitest.config.mjs
.claude/: settings.local.json
.dev/: README.md
.dev/co-dev/: .env.example  .gitignore  README.md  cli.py  pyproject.toml
.dev/co-dev/config/: agents.yaml  gates.yaml  router.yaml  settings.yaml
.dev/co-dev/config/prompts/: backend.md  cto.md  devops.md  doc_writer.md  feat07-enrollment.md  frontend.md  migrator.md  pm.md  qa.md  tech_lead.md
.dev/co-dev/core/: __init__.py  gates.py  indexer.py  llm.py  pipeline.py  retriever.py  state.py  tools.py
.dev/co-dev/data/: vector.db.bak
.dev/co-dev/outputs/: DOC-202604041305.md  DOC-202604041352.md  DOC-202604041404.md  DOC-202604042308.md  DOC-202604042348.md  DOC-202604050032.md  DOC-202604050034.md  SPEC-202603290632.md  SPEC-202604040955.md  TASK-202603290326.md  TASK-202603290525.md  TASK-202603290547.md  copy_mindmap.py  crop_mindmap.py  nlm_check.py  nlm_export.py  nlm_full_status.py  nlm_mindmap.py  nlm_status.py  nlm_upload.py  resize_mindmap.py
.dev/co-dev/scripts/: benchmark.py
.dev/co-dev/tests/: test_llm.py  test_pipeline_progress.py  test_tools.py
changelog/: CL-20260404-001.md  CL-20260404-002.md  CL-20260404-003.md  CL-20260404-004.md  CL-20260404-005.md  CL-20260404-006.md  CL-20260404-007.md  CL-20260404-008.md  (+7 more)
(+426 files in other folders)
